--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,8 +25,8 @@ jobs:
           access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
     - name: Show nixpkgs version
       run: nix-instantiate --eval -E '(import <nixpkgs> {}).lib.version'
-    - name: Update ms-edge
-      run: nix-shell -p python3 --run "python3 ./scripts/update.py --noconfirm microsoft-edge"
+    #- name: Update ms-edge
+    #  run: nix-shell -p python3 --run "python3 ./scripts/update.py --noconfirm microsoft-edge"
     - name: Update clock-tui
       run: nix-shell -p python3 --run "python3 ./scripts/update.py --noconfirm clock-tui"
     - name: Update sddm-astronaut
